# world-of-workflows

./: .gitignore  README.md  example_usage.py  pyproject.toml  requirements.txt  snow_setup.py
example_predictions/: original_constraint_prediction.json  test_action.json
src/: README_custom_schema.md  README_task_evaluation.md  README_trajectory_predictor.md  __init__.py  agentic_schema_pipeline.py  error_analysis_summary.md  eval_constraint_models.sh  eval_pipeline.py  evaluate_action_predictions.py  evaluate_state_predictions.py  extract_simple_tool_specs.py  generate_action_predictions.py  generate_constraint_violation_trajectories.py  generate_schemas.py  generate_table_schemas.py  generate_task_state_predictions.py  generate_tool_mapping.py  generate_tool_specs.py  generate_utilities.py  instance.py  predict_trajectory_states.py  run_task_evaluation.py  simple_state_evaluation.py  states.py  unified_evaluation.py  world_model_agent.py  world_utils.py
src/constraint_violation_data/combined_trajectory_10_2/: answer.json
src/constraint_violation_data/combined_trajectory_1_4/: answer.json
src/constraint_violation_data/combined_trajectory_2_2/: answer.json
src/constraint_violation_data/combined_trajectory_2_4/: trajectory.json
src/constraint_violation_data/combined_trajectory_3_2/: answer.json
src/constraint_violation_data/combined_trajectory_4_1/: answer.json  trajectory.json
src/constraint_violation_data/combined_trajectory_4_4/: answer.json
src/constraint_violation_data/combined_trajectory_6_1/: answer.json
src/constraint_violation_data/combined_trajectory_6_3/: answer.json
src/constraint_violation_data/combined_trajectory_6_4/: answer.json
src/constraint_violation_data/combined_trajectory_7_1/: trajectory.json
src/constraint_violation_data/combined_trajectory_7_3/: trajectory.json
src/constraint_violation_data/combined_trajectory_7_4/: trajectory.json
src/constraint_violation_data/combined_trajectory_9_1/: trajectory.json
src/constraint_violation_data/combined_trajectory_9_3/: answer.json  trajectory.json
src/constraint_violation_data/constraint1/: answer.json
src/constraint_violation_data/constraint10/: answer.json
src/constraint_violation_data/constraint2/: trajectory.json
src/constraint_violation_data/constraint4/: answer.json
src/constraint_violation_data/constraint7/: trajectory.json
src/prompts/: action_prediction_prompt.txt  few_shot_examples.json
src/qa_data/combined_trajectory_10_1/: answer.json  trajectory.json
src/qa_data/combined_trajectory_10_2/: answer.json  trajectory.json
src/qa_data/combined_trajectory_10_3/: answer.json  trajectory.json
src/qa_data/combined_trajectory_10_4/: answer.json  trajectory.json
src/qa_data/combined_trajectory_11_1/: answer.json  trajectory.json
src/qa_data/combined_trajectory_11_2/: answer.json  trajectory.json
src/qa_data/combined_trajectory_11_3/: answer.json  (+1 more)
src/trajectories/: composite1.json  composite4.json  createhierarchy.json  createrequest.json  incident.json  kb_article.json  script_development.json
src/wow/: config.py  install.py  instance.py  utils.py
submodules/servicenow-mcp/: README.md
world_of_workflows.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+870 files in other folders)
