[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "world-of-workflows"
version = "0.1.0"
description = "World model agent for ServiceNow workflows and state prediction"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["world-model", "servicenow", "mcp", "llm", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Core dependencies
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    # ServiceNow and MCP
    "servicenow-mcp>=0.1.0",
    "mcp-use>=0.1.0",
    # LangChain and LLM integrations
    "langchain-openai>=0.1.0",
    "langfuse>=2.15.0",
    # Data validation and models
    "pydantic>=2.5.0",
    # Utility libraries
    "tqdm>=4.66.0",
    "numpy>=1.24.0",
    "pytz>=2024.1",
    "tyro>=0.8.0",
    # Optional dependencies
    "torch>=2.0.0",
    "browsergym>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt", "*.md"]

